# llm_station

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  WORKLOG.md  WORK_LOG.md  docker-compose.agent-proof.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: contracts.yml
.pytest-tmp-self-improvement-3/test_all_registered_boards_are0/: boards.yaml  events.jsonl
.pytest-tmp-self-improvement-3/test_boards_served_from_worker0/: board-snapshot.json
.pytest-tmp-self-improvement-3/test_chat_conversations_index_0/: chat-threads.json
.pytest-tmp-self-improvement-3/test_chat_endpoint_survives_pr0/: chat-threads.json
.pytest-tmp-self-improvement-3/test_chat_threads_store_shared0/: chat-threads.json
.pytest-tmp-self-improvement-3/test_chat_validates_model_agai0/: models.yaml
.pytest-tmp-self-improvement-3/test_delete_conversation_clear0/: chat-threads.json
.pytest-tmp-self-improvement-3/test_finish_apply_drafts_propo0/: report.md
.pytest-tmp-self-improvement-3/test_finish_drafts_kanban_card0/: r.md.manifest.json
appflowy_kanban/: .gitignore
appflowy_kanban/growth-os/: requirements.txt  (+1 more)
configs/: agent-session-budgets.yaml  agent-session-models.yaml  agent_surface.yaml  assistant-routing.yaml  autonomy.yaml  breakage.yaml  capabilities.yaml  channels.yaml  config_audit.jsonl  content.yaml  content_pipeline.yaml  content_reference.yaml  discovery.yaml  domain_surfaces.yaml  environments.yaml  evals.yaml  framework-evals.yaml  frontier-router-budgets.yaml  frontier-router-providers.yaml  gates.yaml  improvement-targets.yaml  improvement.yaml  job_search.yaml  judges.yaml  kanban.yaml  kanban_boards.yaml  local-frontier-providers.yaml  memory.yaml  model-benchmarks.yaml  model-scout-curated-openweight.yaml  model-scout-watchlist.yaml  model-serving-benchmarks.yaml  models.light.yaml  models.yaml  proactive.yaml  session_policies.yaml  standards.yaml  targets.yaml  tools.yaml  ui.yaml  (+1 more)
dags/: job_search_daily.py  self_improvement_daily.py
data/: book-checklist.md
docker/: render.Dockerfile
docs/: ADDING_A_KANBAN.md  ADDING_A_REPO.md  GETTING_STARTED.md  INSTALL_WINDOWS.md  INSTALL_WSL.md  LINKEDIN_PIPELINE.md  LIVE_KANBAN_SYNC.md  MASTER.md  OPERATIONS_RUNBOOK.md  OPERATOR_COMMANDS.md  RUNNING_DAILY_SELF_IMPROVEMENT.md  SECURITY_MODEL.md  SETUP-FROM-SCRATCH.md  STATUS.md  TROUBLESHOOTING.md  agent-ideas-evaluation-prompt.md  agent-multiturn-and-memory.md  agentic-process-improvements-2026-06-20.md  autonomous-pipeline-gap-review-2026-06-16.md  autonomy-idea-map.md  breakage-map.md  capability-evaluation-loop.md  channels.md  cockpit-mission-prompt.md  daily-self-improvement-dag.md  desktop-noop-canary-telemetry.md  desktop-timeout-takeover-policy.md  ecosystem.md  environment-map.md  github-app-production-auth-review-2026-06-16.md  github-safety.md  github-token-storage-rotation.md  growth-os-engineering.md  improvement-loop-audit.md  judge-calibration.md  kanban-integration.md  knowledge-format.md  linkedin-setup.md  memory-integration-patch.md  model-routing.md  (+11 more)
growth_os/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  chat.bat
knowledge/: index.md  log.md
life-center-infra/: .env.example  .gitignore  Makefile  README.md  catalog.py  lc  lc.ps1  lc.py
repo-template/: .pre-commit-config.yaml  CODEOWNERS
scripts/: cc.ps1  check_master_runtime_truth.py  eval_match_organize.py  gateway.ps1  job_search_daily.ps1  live_smoke.ps1  live_smoke.sh  measure_life_center_growth.ps1  qualify_life_center_backup_laptop.ps1  register_job_search_schedule.ps1  register_life_center_growth_schedule.ps1  report_life_center_growth.ps1  run_agent_deployment_proof.ps1  run_kanban_bridge.cmd  run_kanban_bridge.vbs  run_life_center_backup.cmd  run_life_center_backup.vbs  run_life_center_sync.cmd  run_life_center_sync.vbs  start_agent_worker.ps1  start_gateway.cmd  start_gateway.vbs  validate_todo_job_hunt.py
tests/: conftest.py  test_acceptance.py  test_actions_intent.py  test_adapter_bench.py  test_agent_deployment_proof_safety.py  test_agent_improvement_demo.py  test_agent_kanban_authority.py  test_agent_kanban_ui.py  test_agent_kanban_ui_agent_session_specs.py  test_agent_kanban_ui_agent_sessions.py  test_agent_kanban_ui_capture.py  test_agent_kanban_ui_capture_convert.py  test_agent_kanban_ui_packet.py  test_agent_kanban_ui_promote.py  test_agent_kanban_ui_routing_calibration.py  test_agent_kanban_ui_routing_telemetry.py  test_agent_kanban_ui_usage.py  test_agent_kanban_ui_workgraph.py  test_agent_observability.py  test_agent_pickers.py  test_agent_preflight.py  test_agent_session_approvals.py  test_agent_session_ledger_rest.py  test_agent_session_ledger_schema.py  test_agent_session_registry.py  test_agent_session_service.py  test_agent_session_spec.py  test_agent_sessions.py  test_agent_sessions_ledger_store.py  test_agent_usage_normalization.py  test_agent_validation.py  test_agent_worker.py  test_agent_workspace_scope.py  test_all_target_types.py  test_antigoodhart.py  test_appflowy_migrate.py  test_assistant_doctor.py  test_assistant_routing.py  test_assistant_verify.py  test_assistants_catalog.py  (+193 more)
(+957 files in other folders)
