[project]
name = "command-center"
version = "4.0.0"
description = "Typed, validated control plane for a self-hosted agent command center"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.10",
  "pyyaml>=6.0",
  "httpx>=0.28",
  "pydantic-settings>=2.2",
  "tenacity>=8.2",
]

# Channel transports are optional: the control plane (validate/render/serve) needs none of
# them. Install with `uv pip install -e ".[gateways]"` to run the chat gateways.
# Telegram needs only httpx (already core); discord/slack/whatsapp pull their SDKs here.
[project.optional-dependencies]
gateways = [
  "discord-py>=2.4",
  "slack-bolt>=1.21",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8.0",
  "fastapi>=0.115",
  "types-PyYAML>=6.0",
]
# Real Codex Agent harness (src/command_center/agent_sessions/adapters/codex_agent.py).
# Pinned EXACTLY, not floated — this is a beta SDK (0.1.0bN) with a bundled native
# CLI binary dependency (openai-codex-cli-bin); a floating range would silently pull
# a different beta build with a different (possibly undocumented) event surface.
# Verified real via https://pypi.org/pypi/openai-codex/json (author=OpenAI) — NOT
# the unrelated `codex-sdk` PyPI package (Cleanlab's product, see agent_preflight.py).
agent-codex = [
  "openai-codex==0.1.0b3",
]

# Console scripts are only exposed for commands that resolve their own paths and so work from
# any directory. The config-pipeline commands read `configs/` relative to the repo root and are
# invoked through `make` or `python -m command_center.cli.<name>` from the repo root (see Makefile).
[project.scripts]
cc = "command_center.cli.main:main"                  # portable operator interface: `uv run cc <command>`
cc-gateway = "command_center.channels.__main__:main"
cc-model-scout = "command_center.registry.model_scout:main"
cc-usage-digest = "command_center.cli.usage_digest:main"
cc-verify-env = "command_center.cli.verify_env:main"
cc-init-env = "command_center.cli.init_env:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
# E702: the CLIs deliberately use compact `cond: print(...); ok=False; continue`
# guards — that terseness is the house style, not an accident.
ignore = ["E702"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]   # package __init__ modules re-export their public API

[tool.mypy]
files = ["src"]
python_version = "3.12"

# openai-codex is an OPTIONAL, un-stubbed beta SDK (extra `agent-codex`); it is
# imported lazily inside functions so the package works without it. mypy can't
# resolve it in the default env, so treat its absence as a missing-import
# (not a type error) everywhere it's referenced — the adapter, the preflight,
# and the usage collector.
[[tool.mypy.overrides]]
module = ["openai_codex.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
